# loon

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  ROADMAP.md  loon.pest  shell.nix  vercel.json
.direnv/: nix-profile-pre511230.5068bc8fe943  nix-profile-pre511230.5068bc8fe943.rc
crates/loon-cli/: Cargo.toml  build.rs
crates/loon-cli/src/: main.rs  repl.rs
crates/loon-lang/: Cargo.toml
crates/loon-lang/src/: intern.rs  lib.rs  module.rs  prelude.rs
crates/loon-lang/src/ast/: mod.rs  typed.rs
crates/loon-lang/src/check/: mod.rs  ownership.rs
crates/loon-lang/src/codegen/: capture.rs  collections.rs  mod.rs  strings.rs
crates/loon-lang/src/effects/: mod.rs
crates/loon-lang/src/errors/: codes.rs  mod.rs  tutorials.rs
crates/loon-lang/src/fmt/: mod.rs
crates/loon-lang/src/interp/: builtins.rs  dom_builtins.rs  env.rs  html_bridge.rs  mod.rs  net.rs  value.rs
crates/loon-lang/src/macros/: compile_builtins.rs  mod.rs
crates/loon-lang/src/parser/: mod.rs
crates/loon-lang/src/pkg/: capability.rs  fetch.rs  index.rs  lockfile.rs  manifest.rs  mod.rs  resolve.rs  version.rs
crates/loon-lang/src/syntax/: mod.rs  tokens.rs
crates/loon-lang/src/types/: mod.rs
crates/loon-lang/tests/: check_module_tests.rs  interp_tests.rs  macro_tests.rs
crates/loon-lang/tests/modules/: main.loon  math.loon  math.oo
docs/: packages.md
samples/: effects.loon  fib-simple.loon  fib.loon  hello.loon  input.txt  multi-arity.loon  pipeline.loon  test-suite.loon  types.loon  word-count.loon  word-freq.loon  word-freq.oo
src/: compiler.rs  (+2 more)
(+83 files in other folders)
