[package]
name = "loon-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "loon"
path = "src/main.rs"

[dependencies]
loon-lang = { path = "../loon-lang" }
clap = { version = "4", features = ["derive"] }
rustyline = "15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
owo-colors = "4"
