[package]
name = "loon-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "loon"
path = "src/main.rs"

[dependencies]
loon-lang = { path = "../loon-lang", features = ["pkg-fetch"] }
clap = { version = "4", features = ["derive"] }
rustyline = "15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
owo-colors = "4"
wasmtime = "29"
wasmtime-wasi = "29"
loon-lsp = { path = "../loon-lsp" }
tokio = { version = "1", features = ["full"] }
